# cmany

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  requirements.txt  requirements_test.txt  setup.py
.ci/: appveyor_test.bat  dev_test.sh  show_cmake_sysinfo.bat  travis_install.sh  travis_test.sh
c4/pycmake/: __init__.py  cmd.py  pycmake.py
conf/: cmany.yml
doc/: .gitignore  Makefile  basic_usage.rst  build_items.rst  cmany.rst  conf.py  dependencies.rst  excluding_builds.rst  flags.rst  index.rst  installing.rst  intro.rst  make.bat  project_mode.rst  quick_tour.rst  reusing_arguments.rst  variants.rst  vs.rst
doc/_build/text/: basic_usage.txt  build_items.txt  cmany.txt  dependencies.txt  excluding_builds.txt  flags.txt  index.txt  installing.txt  intro.txt  project_mode.txt  quick_tour.txt  reusing_arguments.txt  variants.txt  vs.txt
src/: cmany_main.py
src/c4/cmany/: __init__.py  architecture.py  args.py  build.py  build_flags.py  build_item.py  build_type.py  cflags.py  cmake.py  cmake_sysinfo.py  cmany.py  cmanys.py  combination_rules.py  compiler.py  conan.py  conf.py  err.py  flags.py  flags.yml  generator.py  (+9 more)
test/: CMakeCache.txt  CMakeLists.txt  install.bat  install.sh  main.cpp  run.bat  run.sh  subtest_fix.py  test00util.py  test01vsinfo.py  test02flags.py  test03cmany.py  test03variant.py  test04cmany.py  test04combinations.py  test05cmany.py  test06xcompile.py  test07config.py  test_01cmake.py  test_02flags.py  test_04combinations.py  test_05cmany.py  test_06xcompile.py  test_07config.py  toolchain-arm-linux-gnueabi.cmake  toolchain-arm-linux-gnueabihf.cmake  toolchain-mips-linux-gnueabi.cmake   toolchain-mipsel-linux-gnueabi.cmake 
test/depends/: CMakeLists.txt  main.cpp
test/hello/: CMakeLists.txt
test/libhello/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
test/unit/: pycmake_test.py  test.py
(+11 files in other folders)
